test/memory/shannon/reallocWithoutMalloc.good
reallocWithoutMalloc.chpl:5: error: Attempting to realloc memory for unknown that wasn't allocated
